--- a/app/components/Account/Registration/registrationView.html
+++ b/app/components/Account/Registration/registrationView.html
@@ -10,9 +10,9 @@
       <label for="sender">{{'texts.sender' | i18next}}</label>
     </div>
     <div class="form-group half">
-      <input type="text" name="username" class="form-control my-input" placeholder="{{'texts.username' | i18next}}" ng-model="user.username" 
+      <input type="text" name="username" id="username" class="form-control my-input" placeholder="{{'texts.username' | i18next}}" ng-model="user.username"
         ng-class="{'input-error' : registrationForm.username.$invalid && (!registrationForm.username.$pristine || clicked)}" 
-        ng-minlength="8" required />
+        required />
     </div>
 
     <div class="form-group half">
@@ -21,14 +21,14 @@
              required />
     </div>
     <div class="form-group half">
-      <input type="password" name="password" class="form-control my-input" placeholder="{{'texts.password' | i18next}}" ng-model="user.password" 
+      <input type="password" name="password" id="password" class="form-control my-input" placeholder="{{'texts.password' | i18next}}" ng-model="user.password"
       ng-class="{'input-error' : registrationForm.password.$invalid && (!registrationForm.password.$pristine || clicked)}" 
-      ng-minlength="8" required />
+      required />
     </div>
     <div class="form-group half">
       <input type="password" name="confirmPassword" class="form-control my-input" placeholder="{{'texts.confirmPassword' | i18next}}" ng-model="user.confirmPassword" 
       ng-class="{'input-error' : registrationForm.confirmPassword.$invalid && (!registrationForm.confirmPassword.$pristine || clicked)}" 
-      ng-minlength="8" required />
+      required />
     </div>
     <div class="form-group half">
       <input type="text" name="name" class="form-control my-input" placeholder="{{'texts.name' | i18next}}" ng-model="user.name"
