--- a/app/components/Company/AddDriver/addDriverView.html
+++ b/app/components/Company/AddDriver/addDriverView.html
@@ -4,9 +4,9 @@
     <form name="addUserForm" novalidate>
 
       <div class="form-group half">
-        <input type="text" name="username" class="form-control my-input" placeholder="{{'texts.username' | i18next}}" ng-model="employee.username"
+        <input type="text" name="username" id="username" class="form-control my-input" placeholder="{{'texts.username' | i18next}}" ng-model="employee.username"
                ng-class="{'input-error' : addUserForm.username.$invalid && (!addUserForm.username.$pristine || clicked)}"
-               ng-minlength="8" required />
+               required />
       </div>
       <div class="form-group half">
         <input type="email" name="email" class="form-control my-input" placeholder="{{'texts.email' | i18next}}" ng-model="employee.email"
@@ -14,14 +14,14 @@
                required />
       </div>
       <div class="form-group half">
-        <input type="password" name="password" class="form-control my-input" placeholder="{{'texts.password' | i18next}}" ng-model="employee.password"
+        <input type="password" name="password" id="password" class="form-control my-input" placeholder="{{'texts.password' | i18next}}" ng-model="employee.password"
                ng-class="{'input-error' : addUserForm.password.$invalid && (!addUserForm.password.$pristine || clicked)}"
-               ng-minlength="8" required />
+               required />
       </div>
       <div class="form-group half">
         <input type="password" name="confirmPassword" class="form-control my-input" placeholder="{{'texts.confirmPassword' | i18next}}" ng-model="employee.confirmPassword"
                ng-class="{'input-error' : addUserForm.confirmPassword.$invalid && (!addUserForm.confirmPassword.$pristine || clicked)}"
-               ng-minlength="8" required />
+               required />
       </div>
       <div class="form-group half">
         <input type="text" name="name" class="form-control my-input" placeholder="{{'texts.name' | i18next}}" ng-model="employee.name"
