--- a/app/components/Admin/Users/usersView.html
+++ b/app/components/Admin/Users/usersView.html
@@ -4,6 +4,7 @@
         <h2>{{'texts.users' | i18next}}</h2>
         <input type="text" ng-model="id_transporter"/>
         <button ng-click="AddShipment(id_transporter)">Add Shipment</button>
+        <button ng-click="GetAuctionCache()">Get auction cache</button>
         <table ng-if="users.length" class="table table-striped table-responsive user-list">
             <tr>
                 <th>Username</th>
