--- a/app/components/Admin/Map/mapView.html
+++ b/app/components/Admin/Map/mapView.html
@@ -8,18 +8,19 @@
     </style>
     <h1>{{'texts.admin' | i18next}}</h1>
     <div class="col-md-12">
-        <h2>{{'texts.map' | i18next}}</h2>
         <div id="mapDrivers" class="map"></div>
-        <table ng-if="drivers.length" class="table table-striped table-responsive user-list">
+        <table ng-show="drivers.length" class="table table-striped table-responsive user-list">
             <tr>
                 <th>Username</th>
                 <th>Name</th>
                 <th>Surname</th>
+                <th>Last Position</th>
             </tr>
             <tr class="item" ng-repeat="driver in drivers">
                 <td>{{driver.driver.username}}</td>
                 <td>{{driver.driver.name}}</td>
                 <td>{{driver.driver.surname}}</td>
+                <td>{{GetLastGpsUpdate(driver.last_position_set)}}</td>
             </tr>
         </table>
     </div>
