--- a/app/components/Admin/Users/usersView.html
+++ b/app/components/Admin/Users/usersView.html
@@ -11,6 +11,7 @@
                 <th>Email</th>
                 <th>Name</th>
                 <th>Surname</th>
+                <th>IČO</th>
                 <th>Credit</th>
                 <th>Actions</th>
             </tr>
@@ -19,6 +20,7 @@
                 <td>{{user.email}}</td>
                 <td>{{user.name}}</td>
                 <td>{{user.surname}}</td>
+                <td>{{user.ico}}</td>
                 <td>{{user.credit}}({{user.share}})</td>
                 <td>
                     <span class="glyphicon glyphicon-ok-circle"
