--- a/css/form.css
+++ b/css/form.css
@@ -81,9 +81,12 @@
   padding-left: 46px;  @input-height-large;
 }
 
-.form-group{
+.form-group {
     position: relative;
     margin-top: 40px;
+}
+.form-group .condition-label {
+    width: 90%;
 }
 
 .form-group.half{
