--- a/app/components/Auction/FavouriteAuction/favouriteAuctionView.html
+++ b/app/components/Auction/FavouriteAuction/favouriteAuctionView.html
@@ -16,7 +16,7 @@
                 <div class="auction-item" ng-repeat="item in AuctionList">
                     <detail-auction auction-item="{item}"></detail-auction>
                 </div>
-                <paging item-count="AuctionList.length"></paging>
+                <paging item-count="AuctionList.length" all-items-count="AuctionListCount"></paging>
             </div>
         </div>
     </div>
