--- a/app/components/Auction/List/auctionListView.html
+++ b/app/components/Auction/List/auctionListView.html
@@ -58,7 +58,7 @@
             <div class="auction-item" ng-repeat="item in AuctionList">
                 <detail-auction auction-item="{item}" with-favourite="true"></detail-auction>
             </div>
-            <paging item-count="AuctionList.length"></paging>
+            <paging item-count="AuctionList.length" all-items-count="AuctionListCount"></paging>
         </div>
 	</div>
 </div>
