--- a/app/components/Shipments/finished/finishedShipmentsView.html
+++ b/app/components/Shipments/finished/finishedShipmentsView.html
@@ -2,7 +2,7 @@
     <div class="auction-list-page">
         <div class="auction-list col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
             <h1>{{'texts.shipment.finished' | i18next}}</h1>
-            <div ng-if="finishedShipments.length" class="auction-header-line">
+            <div ng-if="shipments.length" class="auction-header-line">
                 <div class="auction-header">
                     <div class="auction-cell col-sm-3">{{'texts.auction.from' | i18next}}</div>
                     <div class="auction-cell col-sm-3">{{'texts.auction.to' | i18next}}</div>
@@ -11,11 +11,11 @@
                 </div>
             </div>
             <div class="auction-body">
-                <div ng-if="!finishedShipments.length" class="no-auction">{{'texts.shipment.no_shipments' | i18next}}</div>
-                <div class="auction-item" ng-repeat="item in finishedShipments">
+                <div ng-if="!shipments.length" class="no-auction">{{'texts.shipment.no_shipments' | i18next}}</div>
+                <div class="auction-item" ng-repeat="item in shipments">
                     <detail-shipment shipment-item="{item}" finished-shipment="true"></detail-shipment>
                 </div>
-                <paging item-count="finishedShipments.length"></paging>
+                <paging item-count="shipments.length" all-items-count="shipmentsCount"></paging>
             </div>
         </div>
     </div>
